# shortMaker

./: .gitignore  langchain.ipynb  main.py  models.ipynb  notboook.ipynb  pyproject.toml  shorts_agent_pro.py  streamlit_app.py
output/: script.json  timestamps.json
