[project]
name = "onedaylangchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.3",
    "dotenv>=0.9.9",
    "gtts>=2.5.4",
    "langchain-anthropic>=1.4.3",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langchain[anthropic]>=1.3.1",
    "moviepy>=2.2.1",
    "numpy>=2.4.6",
    "pillow>=11.3.0",
    "pypdf>=6.12.2",
    "rich>=15.0.0",
]
